# aoc-solutions

./: README.md  pyproject.toml
2023/: aoc.py  common.py  pyproject.toml
2023/day2/: __main__.py  example1.txt
2023/day3/: __main__.py
2023/day4/: __main__.py
2023/day5/: __main__.py
2023/day9/: __main__.py  final_input.txt  input.txt
2024/day1/: part1.py  part2.py
2024/day2/: part1.py  part2.py
2024/day3/: part1.py  part2.py
2024/day4/: part1.py  part2.py
day2/: __main__.py  final_input.txt
day3/: __main__.py
