[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Alex Howard <thezanke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
suite = "aoc:run"